--- a/website/static/styles/base.css
+++ b/website/static/styles/base.css
@@ -6,13 +6,17 @@ body {
     padding: 0px; 
     color: #181818;
     font-size: 16px;
-    font-family: Circular, "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: '04b30', sans-serif;
     display: flex;
     flex-direction: column;
 }
-.div {
-    max-width: 1000px;
-    margin: 30px auto;
-    width: 100%;
-    flex: 1 0 auto;
+
+navbar-nav {
+    margin: 0px;
+    padding: 0px; 
+    color: #181818;
+    font-size: 16px;
+    font-family: '04b30', sans-serif;
+    display: flex;
+    flex-direction: column;
 }
