--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -10,12 +10,7 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css"
-      integrity="sha384-QYIZto+st3yW+o8+5OHfT6S482Zsvz2WfOzpFSXMF9zqeLcFV0/wlZpMtyFcZALm"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="../static/styles/base.css">
 
     <title>{% block title %}Home{% endblock %}</title>
   </head>
@@ -40,10 +35,9 @@
       </div>
     </nav>
 
-    {% with messages = get_flashed_messages(with_categories=true) %} 
-    {% if messages %} 
-      {% for category, message in messages %}
-      {% if category == 'error' %}
+    {% with messages = get_flashed_messages(with_categories=true) %} {% if
+    messages %} {% for category, message in messages %} {% if category ==
+    'error' %}
     <div class="alert alert-danger alter-dismissable fade show" role="alert">
       {{ message }}
       <button type="button" class="close" date-dismiss="alert">
@@ -57,10 +51,7 @@
         <span aria-hidden="true">&times;</span>
       </button>
     </div>
-      {% endif %}
-      {% endfor %} 
-    {% endif %} 
-    {% endwith %}
+    {% endif %} {% endfor %} {% endif %} {% endwith %}
 
     <div class="container">{% block content %} {% endblock %}</div>
 
