--- a/website/static/styles/login.css
+++ b/website/static/styles/login.css
@@ -5,7 +5,7 @@
 /* BASIC */
 
 html {
-  background-color: #ce0be3;
+  background-color: #FF62C7 ;
 }
 
 body {
@@ -77,7 +77,7 @@ h2.inactive {
 
 h2.active {
   color: #0d0d0d;
-  border-bottom: 2px solid #ce0be3;
+  border-bottom: 2px solid #FF62C7 ;
 }
 
 
@@ -85,7 +85,7 @@ h2.active {
 /* FORM TYPOGRAPHY*/
 
 input[type=button], input[type=submit], input[type=reset]  {
-  background-color: #ce0be3;
+  background-color: #FF62C7 ;
   border: none;
   color: white;
   padding: 15px 80px;
@@ -107,7 +107,7 @@ input[type=button], input[type=submit], input[type=reset]  {
 }
 
 input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover  {
-  background-color: #ce0be3;
+  background-color: #FF62C7 ;
 }
 
 input[type=button]:active, input[type=submit]:active, input[type=reset]:active  {
@@ -141,7 +141,7 @@ input[type=text] {
 
 input[type=text]:focus {
   background-color: #fff;
-  border-bottom: 2px solid #ce0be3;
+  border-bottom: 2px solid #FF62C7 ;
 }
 
 input[type=text]:placeholder {
@@ -239,7 +239,7 @@ input[type=text]:placeholder {
   bottom: -10px;
   width: 0;
   height: 2px;
-  background-color: #ce0be3;
+  background-color: #FF62C7 ;
   content: "";
   transition: width 0.2s;
 }
