--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -7,7 +7,7 @@
  	<script type="text/javascript" src="1.js"></script>
 	<link rel="stylesheet" href="vendor/bootstrap.css">
 	<link rel="stylesheet" href="vendor/font-awesome.css">
- 	<link rel="stylesheet" href=" login.css">
+ 	<link rel="stylesheet" href="./styles/login.css">
 </head>
 <body >
   <div class="wrapper fadeInDown">
@@ -18,7 +18,7 @@
   
       <!-- Icon -->
       <div class="fadeIn first">
-        <img src="http://danielzawadzki.com/codepen/01/icon.svg" id="icon" alt="User Icon" />
+        <img src="./images/ceur-logo.png" id="icon" alt="User Icon" />
       </div>
   
       <!-- Login Form -->
