--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -9,14 +9,14 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link rel="stylesheet" href="vendor/font-awesome.css">
- 	<link rel="stylesheet" href="./styles/index.css">
+ 	<link rel="stylesheet" href="../static/styles/index.css">
    <meta name="description" content="fullPage fixed full-screen backgrounds." />
 </head>
 <body >
   <header>
     <div class="container_top">
       <div class="logo_name">
-        <img class="images_logo" src="./images/ceur-logo.png" alt="">
+        <img class="images_logo" src="../static/images/ceur-logo.png" alt="">
       </div>
       <div class="nav_bar_menu">
         <nav>
@@ -52,8 +52,8 @@
     </div>
     <div class="section fp-auto-height" id="section2">
         <div class="penguin_photo">
-          <img class="penguin" src="./images/penguin_pexel_heart-COUPLE.png" alt="">
-          <img class="penguin" src="./images/stageforpenguin.jpg" alt="">
+          <img class="penguin" src="../static/images/penguin_pexel_heart-COUPLE.png" alt="">
+          <img class="penguin" src="../static/images/stageforpenguin.jpg" alt="">
 
           
         </div>
