--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -14,7 +14,7 @@
     <div id="formContent">
       <!-- Tabs Titles -->
       <h2 class="active"> Sign In </h2>
-      <h2 class="inactive underlineHover">Sign Up </h2>
+      <h2 class="inactive underlineHover"> <a href="./signup.html">Sign Up</a></h2>
   
       <!-- Icon -->
       <div class="fadeIn first">
