--- a/website/templates/signup.html
+++ b/website/templates/signup.html
@@ -46,7 +46,7 @@
           </div>
           </form>
           <p class="loginhere">
-          Have already an account ? <a href="./login.html" class="loginhere-link">Login here</a>
+          Have already an account ? <a href="../templates/login.html" class="loginhere-link">Login here</a>
           </p>
           </div>
           </div>
