--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -23,7 +23,7 @@
   
       <!-- Login Form -->
       <form>
-        <input type="text" id="login" class="fadeIn second" name="login" placeholder="login">
+        <input type="text" id="email" class="fadeIn second" name="email" placeholder="email">
         <input type="text" id="password" class="fadeIn third" name="login" placeholder="password">
         <input type="submit" class="fadeIn fourth" value="Log In">
       </form>
