--- a/website/templates/signup.html
+++ b/website/templates/signup.html
@@ -25,7 +25,7 @@
           <input type="email" class="form-input" name="email" id="email" placeholder="Enter Email" />
           </div>
           <div class="form-group">
-               <p>Pseudo</p>
+               <p>Username</p>
                <input type="text" class="form-input" name="name" id="name" placeholder="Pseudo">
                </div>
           <div class="form-group">
