--- a/website/templates/signup.html
+++ b/website/templates/signup.html
@@ -25,8 +25,8 @@
           <input type="email" class="form-input" name="email" id="email" placeholder="Enter Email" />
           </div>
           <div class="form-group">
-               <p>Username</p>
-               <input type="text" class="form-input" name="name" id="name" placeholder="Pseudo">
+               <p>Pseudo</p>
+               <input type="text" class="form-input" name="pseudo" id="pseudo" placeholder="pseudo">
                </div>
           <div class="form-group">
                <p>Password</p>
