--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -1,68 +1,86 @@
 <!DOCTYPE html>
-<html lang="en"><head>
-	<title> index </title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">  
-	<script type="text/javascript" src="vendor/bootstrap.js"></script>
- 	<script type="text/javascript" src=".js"></script>
-	<link rel="stylesheet" href="vendor/bootstrap.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	<link rel="stylesheet" href="vendor/font-awesome.css">
- 	<link rel="stylesheet" href="../static/styles/index.css">
-   <meta name="description" content="fullPage fixed full-screen backgrounds." />
+<html lang="en">
+
+<head>
+  <title> home page </title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="fullPage fixed full-screen backgrounds." />
+  <!-- bootstrap -->
+  <script type="text/javascript" src="./vendor/js/bootstrap.js"></script>
+  <link href="./vendor/css/bootstrap.css" rel="stylesheet">
+
+  <!-- Font awesome -->
+  <link rel="stylesheet" href="Assets/css/fontawesome.css">
+  <link rel="stylesheet" href="Assets/css/brands.css">
+  <link rel="stylesheet" href="Assets/css/solid.css">
+
+  <link rel="stylesheet" href="../static/styles/index.css">
 </head>
-<body >
+
+<body>
   <header>
     <div class="container_top">
       <div class="logo_name">
-        <img class="images_logo" src="../static/images/ceur-logo.png" alt="">
+        <img class="images_logo" src="../static/images/ceur-logo.png" alt="logo-bebbe">
       </div>
       <div class="nav_bar_menu">
         <nav>
           <ul>
-          <li>
-          <a href="#"> Home </a>
-          </li>
-          <li>
-          <a href="#"> About </a>
-          </li>
-          <li>
-          <a href="#"> Terms </a>
-          </li>
-          <li> <a href="#"> Start</a>
-          </li>
-          <li>
-          <a href="login.html">Login</a>
-          </li>
+            <li>
+              <a href="#" class="button" data-show="home"> Home </a>
+            </li>
+            <li>
+              <a href="#" class="button" data-show="about"> About </a>
+            </li>
+            <li>
+              <a href="#" class="button" data-show="terms"> Terms </a>
+            </li>
+            <li> <a href="#" class="button" data-show="start"> Start</a>
+            </li>
+            <li>
+              <a href="login.html" class="button" data-show="login">Login</a>
+            </li>
           </ul>
-          </nav>
+        </nav>
       </div>
     </div>
   </header>
+  <div class="container">
+    <div class="card" id="home">
+                <p>hello</p>
+    </div>
+    <div class="card" id="about">
+                <p>can you hear me </p>
+    </div>
+    <div class="card" id="terms">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse similique sed ipsam, explicabo quaerat fugit est dolores nulla necessitatibus laudantium, itaque eius, labore aliquam quia! Molestias eum similique non excepturi!</p>
+    </div>
+    <div class="card" id="start">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse similique sed ipsam, explicabo quaerat fugit est dolores nulla necessitatibus laudantium, itaque eius, labore aliquam quia! Molestias eum similique non excepturi!</p>
+    </div>
+  </div>
   <div id="fullpage" class="container">
     <div class="section" id="section0">
-        <div class="intro">
-          <h6>WELCOM TO PEBBLE MATCH</h6>
-          <h6>FIND YOUR PERFECT MATCH TODAY</h2>
-        </div>
+      <div class="intro">
+        <h6>WELCOM TO PEBBLE MATCH</h6>
+        <h6>FIND YOUR PERFECT MATCH TODAY</h2>
+      </div>
     </div>
     <div class="section fp-auto-height" id="section1">
       <button type="button" class="btn btn-outline-dark">START</button>
     </div>
     <div class="section fp-auto-height" id="section2">
-        <div class="penguin_photo">
-          <img class="penguin" src="../static/images/penguin_pexel_heart-COUPLE.png" alt="">
-          <img class="penguin" src="../static/images/stageforpenguin.jpg" alt="">
-
-          
-        </div>
+      <div class="penguin_photo">
+        <img class="penguin" src="../static/images/penguin_pexel_heart-COUPLE.png" alt="">
+        <img class="penguin" src="../static/images/stageforpenguin.jpg" alt="">
+      </div>
     </div>
-</div>
+  </div>
   <footer>
     <hr>
     <p>Project Portfolio ToNoeMia</p>
-  </footer>
-
-</body>
-</html>
+    </footer>
+  <script type="text/javascript" src="../static/index.js"></script>
+</body >
+</html >
