--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
-<html lang="en"><head>
-	<title> Example </title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">  
-	<script type="text/javascript" src="vendor/bootstrap.js"></script>
- 	<script type="text/javascript" src="1.js"></script>
-	<link rel="stylesheet" href="vendor/bootstrap.css">
-	<link rel="stylesheet" href="vendor/font-awesome.css">
- 	<link rel="stylesheet" href="../static/styles/login.css">
+<html lang="en">
+  <head>
+  <title> login </title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="fullPage fixed full-screen backgrounds." />
+  <!-- bootstrap -->
+  <script type="text/javascript" src="./vendor/js/bootstrap.js"></script>
+  <link href="./vendor/css/bootstrap.css" rel="stylesheet">
+
+  <!-- Font awesome -->
+  <link rel="stylesheet" href="Assets/css/fontawesome.css">
+  <link rel="stylesheet" href="Assets/css/brands.css">
+  <link rel="stylesheet" href="Assets/css/solid.css">
+
+  <link rel="stylesheet" href="../static/styles/login.css">
 </head>
 <body >
   <div class="wrapper fadeInDown">
