--- a/website/templates/signup.html
+++ b/website/templates/signup.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
-<html lang="en"><head>
-	<title> signup </title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">  
-	<script type="text/javascript" src="vendor/bootstrap.js"></script>
- 	<script type="text/javascript" src=".js"></script>
-	<link rel="stylesheet" href="vendor/bootstrap.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	<link rel="stylesheet" href="vendor/font-awesome.css">
- 	<link rel="stylesheet" href="../static/styles/signup.css">
-   <meta name="description" content="fullPage fixed full-screen backgrounds." />
+<html lang="en">
+     <head>
+     <title> sign up </title>
+     <meta charset="utf-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1">
+     <meta name="description" content="fullPage fixed full-screen backgrounds." />
+     <!-- bootstrap -->
+     <script type="text/javascript" src="./vendor/js/bootstrap.js"></script>
+     <link href="./vendor/css/bootstrap.css" rel="stylesheet">
+   
+     <!-- Font awesome -->
+     <link rel="stylesheet" href="Assets/css/fontawesome.css">
+     <link rel="stylesheet" href="Assets/css/brands.css">
+     <link rel="stylesheet" href="Assets/css/solid.css">
+   
+     <link rel="stylesheet" href="../static/styles/signup.css">
 </head>
 <body >
      <div class="main">
