update homepage new design

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -34,11 +34,6 @@
               <a href="#" class="button" data-show="about"> About </a>
             </li>
             <li>
-              <a href="#" class="button" data-show="terms"> Terms </a>
-            </li>
-            <li> <a href="#" class="button" data-show="start"> Start</a>
-            </li>
-            <li>
               <a href="login.html" class="button" data-show="login">Login</a>
             </li>
           </ul>
@@ -46,40 +41,23 @@
       </div>
     </div>
   </header>
-  <div class="container">
-    <div class="card" id="home">
-                <p>hello</p>
-    </div>
-    <div class="card" id="about">
-                <p>can you hear me </p>
-    </div>
-    <div class="card" id="terms">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse similique sed ipsam, explicabo quaerat fugit est dolores nulla necessitatibus laudantium, itaque eius, labore aliquam quia! Molestias eum similique non excepturi!</p>
-    </div>
-    <div class="card" id="start">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse similique sed ipsam, explicabo quaerat fugit est dolores nulla necessitatibus laudantium, itaque eius, labore aliquam quia! Molestias eum similique non excepturi!</p>
-    </div>
-  </div>
+ 
   <div id="fullpage" class="container">
-    <div class="section" id="section0">
-      <div class="intro">
-        <h6>WELCOM TO PEBBLE MATCH</h6>
-        <h6>FIND YOUR PERFECT MATCH TODAY</h2>
+    <div class="section2 fp-auto-height" id="section2">
+      <div class="intro-text">
+        <p class="text-white">Welcome to Pebble Match </p>
+        <p class="text-white">Fill up Quiz </p>
+        <p class="text-white"> Find Your Perfect Match Today
+        </p>
       </div>
-    </div>
-    <div class="section fp-auto-height" id="section1">
-      <button type="button" class="btn btn-outline-dark">START</button>
-    </div>
-    <div class="section fp-auto-height" id="section2">
       <div class="penguin_photo">
         <img class="penguin" src="../static/images/penguin_pexel_heart-COUPLE.png" alt="">
-        <img class="penguin" src="../static/images/stageforpenguin.jpg" alt="">
       </div>
     </div>
   </div>
   <footer>
     <hr>
-    <p>Project Portfolio ToNoeMia</p>
+    <p class="footer">Project Portfolio ToNoeMia</p>
     </footer>
   <script type="text/javascript" src="../static/index.js"></script>
 </body >
