--- a/website/static/styles/index.css
+++ b/website/static/styles/index.css
@@ -16,7 +16,7 @@ img {
 
 .container_top {
      display: flex;
-     justify-content: space-between;
+     justify-content: space-around;
 }
 .logo_name {
      width: 200px;
@@ -32,6 +32,7 @@ background-image: url(../images/background.jpg);
 font-family: 'CustomFont', sans-serif;
 background-attachment: fixed;
 color: #FF62C7;
+font-size: 20px;
 }
 
 .nav_bar_menu {
@@ -56,6 +57,7 @@ a.button {
      padding: 5px;
      box-shadow: 1px 1px black;
      transition: 0.4s;
+
  }
 
 /* full page */
@@ -64,42 +66,30 @@ a.button {
      justify-content: center;
      flex-direction: column;
      width: 100%;
-
-}
-/* section 0 */
-#section0 {
-     color: white;
-     margin-top: 10em;
-}
-.intro {
-     display: flex;
-     flex-direction: column;
-     /* justify-content: center; */
      align-items: center;
- }
 
- /* section 1 */
- .btn {
-     color: #FF62C7;
-     font-size: 30px;
-     background: white;
-     border-radius: 10px;
-     box-shadow: 2px 2px black; 
- }
-
- div#section1 {
-     display: flex;
-     justify-content: center;
-     margin-top: 40px;
- }
-
+}
  /*section2  */
+ .intro-text {
+     font-size: 25px;
+     text-align: center;
+ }
+
  .penguin {
-     width: 400px;
+     width: 200px;
  }
  div#section2 {
      display: flex;
      justify-content: center;
+     align-items: center;
+     flex-flow: column;
+     border: 1px solid white;
+     width: 50em;
+     margin: 100px 0 100px 0;
+     padding: 20px;
+     border-radius: 30px;
+     background-color: #ca9fdb5e;
+     box-shadow: 0em 0.4em 0.4em 0.4em #ffffff94;
  }
  .penguin_photo {
      display: flex;
@@ -109,19 +99,16 @@ a.button {
  }
 
  .scale_button {
-     font-size: 20px;
+     font-size: 30px;
  }
 
 .container {
      position: relative;
 }
- .card {
-     position: absolute;
-     top: 50px;
-     opacity: 0;
-     visibility: hidden;
- }
- .card_show {
-     opacity: 1;
-     visibility: visible;
- }
+
+
+/* footer */
+.footer {
+     font-size: 10px;
+     color: rgba(0, 0, 0, 0.341);
+}
