modify the right name of logo.png

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -22,7 +22,7 @@
   <header>
     <div class="container_top">
       <div class="logo_name">
-        <img class="images_logo" src="../static/images/ceur-logo.png" alt="logo-bebbe">
+        <img class="images_logo" src="../static/images/logo.png" alt="logo-pebble">
       </div>
       <div class="nav_bar_menu">
         <nav>
