--- a/website/static/styles/index.css
+++ b/website/static/styles/index.css
@@ -1,105 +1,121 @@
-*{margin: 0; padding: 0;} 
+* {
+     margin: 0;
+     padding: 0;
+}
+
 /* login page */
 @import url('https://fonts.googleapis.com/css?family=Poppins');
 
 /* logo bar */
 img {
-     width:  100%;
+     width: 100%;
 }
 
 @font-face {
      font-family: "CustomFont";
-     src: url("CustomFont/CustomFont.woff") format("woff"),
-     url("CustomFont/CustomFont.woff") format("opentype"),
-     url("CustomFont.svg#filename") format("svg");
-     }
+     src: url("../styles/CustomFont/CustomFont.woff") format("woff"),
+          url("../styles/CustomFont/CustomFont.woff") format("opentype"),
+          url("CustomFont.svg#filename") format("svg");
+}
 
 .container_top {
      display: flex;
      justify-content: space-around;
+     height: 100px;
 }
+
 .logo_name {
      width: 200px;
+     display: flex;
+     align-items: center;
 }
 
 /* Naviga bar */
-body 
-{
-height: 100vh;
-padding: 20px;
-background-size: cover;
-background-image: url(../images/background.jpg);
-font-family: 'CustomFont', sans-serif;
-background-attachment: fixed;
-color: #FF62C7;
-font-size: 20px;
+body {
+     height: 100vh;
+     padding: 20px;
+     background-size: cover;
+     background-image: url(../images/background.jpg);
+     background-attachment: fixed;
 }
 
 .nav_bar_menu {
      display: flex;
      align-items: center;
-     /* justify-content: center; */
-     /* flex-direction: column; */
- }
+     width: 50%;
+}
+
 .nav_bar_menu * {
-display: inline;
+     display: inline;
 }
+
 .nav_bar_menu li {
-margin: 10px;
-display: inline-block;
+     margin: 10px;
+     display: inline-block;
+
 }
-a.button {
+
+.button-style {
      color: rgb(255, 0, 187);
      text-decoration: none;
      border: solid 1px black;
-     border-radius: 4px;
+     border-radius: 10px;
      background-color: white;
-     padding: 5px;
-     box-shadow: 1px 1px black;
+     padding: 15px;
+     box-shadow: 0 0 5px  rgb(126, 116, 116) inset;
      transition: 0.4s;
 
- }
+     font-size: 20px;
+     font-family: 'CustomFont', sans-serif;
+
+     margin-right: 20px;
+
+}
 
 /* full page */
 #fullpage {
      display: flex;
-     justify-content: center;
      flex-direction: column;
-     width: 100%;
      align-items: center;
 
 }
- /*section2  */
- .intro-text {
+
+/*section2  */
+.intro-text {
      font-size: 25px;
      text-align: center;
- }
+     font-family:  'CustomFont', sans-serif;
+}
 
- .penguin {
+.penguin {
      width: 20em;
- }
- div#section2 {
+}
+
+div#section2 {
      display: flex;
      justify-content: center;
      align-items: center;
      flex-flow: column;
+
      border: 1px solid white;
-     width: 50em;
-     margin: 100px 0 100px 0;
-     padding: 20px;
      border-radius: 30px;
+
+     width: 50em;
+     margin: 50px 0 100px 0;
+     padding: 20px;
      background-color: #ca9fdb5e;
      box-shadow: 0em 0.4em 0.4em 0.4em #ffffff94;
- }
- .penguin_photo {
+}
+
+.penguin_photo {
      display: flex;
      justify-content: center;
      flex-direction: column;
- }
+}
 
- .scale_button {
+.scale_button {
      font-size: 30px;
- }
+}
 
 .container {
      position: relative;
@@ -111,3 +127,33 @@ a.button {
      font-size: 10px;
      color: rgba(0, 0, 0, 0.341);
 }
+
+/* section 1 */
+
+.section1 {
+     height: 150px;
+     display: flex;
+
+     align-items: end;
+     justify-content: center;
+
+ }
+
+ .hr-underline {
+     content: "";
+
+     margin-top: 10px;
+     position: absolute;
+     width: 100%;
+     height: 4px;
+     background-color: #fa03f15e;
+ }
+
+ .about-text {
+     height: fit-content;
+     font-size: 20px;
+     text-align: center;
+     line-height: 2rem;
+     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+     color: white;
+ }
