--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -28,13 +28,13 @@
         <nav>
           <ul>
             <li>
-              <a href="#" class="button" data-show="home"> Home </a>
+              <a href="#" class="button-style button-menu" data-show="home"> Home </a>
             </li>
             <li>
-              <a href="#" class="button" data-show="about"> About </a>
+              <a href="/website/static/styles/about.html" class="button-style button-menu" data-show="about"> About </a>
             </li>
             <li>
-              <a href="login.html" class="button" data-show="login">Login</a>
+              <a href="login.html" class="button-style button-menu" data-show="login">Login</a>
             </li>
           </ul>
         </nav>
