--- a/website/templates/signup.html
+++ b/website/templates/signup.html
@@ -6,8 +6,8 @@
      <meta name="viewport" content="width=device-width, initial-scale=1">
      <meta name="description" content="fullPage fixed full-screen backgrounds." />
      <!-- bootstrap -->
-     <script type="text/javascript" src="./vendor/js/bootstrap.js"></script>
-     <link href="./vendor/css/bootstrap.css" rel="stylesheet">
+     <script type="text/javascript" src="../templates/vendor/js/bootstrap.js"></script>
+     <link href="../templates/vendor/js/bootstrap.js" rel="stylesheet">
    
      <!-- Font awesome -->
      <link rel="stylesheet" href="Assets/css/fontawesome.css">
