--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="Assets/css/brands.css">
   <link rel="stylesheet" href="Assets/css/solid.css">
 
-  <link rel="stylesheet" href="../static/styles/index.css">
+  <link rel="stylesheet" href="../static/styles/style.css">
 </head>
 
 <body>
@@ -31,7 +31,7 @@
               <a href="#" class="button-style button-menu" data-show="home"> Home </a>
             </li>
             <li>
-              <a href="/website/static/styles/about.html" class="button-style button-menu" data-show="about"> About </a>
+              <a href="../templates/about.html" class="button-style button-menu" data-show="about"> About </a>
             </li>
             <li>
               <a href="login.html" class="button-style button-menu" data-show="login">Login</a>
