update route for about page

--- a/website/templates/about.html
+++ b/website/templates/about.html
@@ -28,15 +28,15 @@
                     <nav>
                          <ul>
                               <li>
-                                   <a href="/website/templates/index.html" class="button-menu button-style"
+                                   <a href="../" class="button-menu button-style"
                                         data-show="home"> Home </a>
                               </li>
                               <li>
-                                   <a href="/website/static/styles/about.html"
+                                   <a href="../about.html"
                                         class="scale_button button-menu button-style" data-show="about"> About </a>
                               </li>
                               <li>
-                                   <a href="/website/templates/login.html" class="button-menu button-style"
+                                   <a href="../login.html" class="button-menu button-style"
                                         data-show="login">Login</a>
                               </li>
                          </ul>
