--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -31,7 +31,7 @@
               <a href="#" class="button-style button-menu" data-show="home"> Home </a>
             </li>
             <li>
-              <a href="../templates/about.html" class="button-style button-menu" data-show="about"> About </a>
+              <a href="../about.html" class="button-style button-menu" data-show="about"> About </a>
             </li>
             <li>
               <a href="login.html" class="button-style button-menu" data-show="login">Login</a>
