--- a/website/templates/about.html
+++ b/website/templates/about.html
@@ -46,17 +46,22 @@
      </header>
      <div class="container">
           <div class="section1 row">
-               <div class="col-sm-4">
+               <div class="col-sm-3">
+                    <button class="btn btn_about button-style " type="button" data-show="about">
+                         <img src="../static/images/Home_page_penguins.png" class="icon-chim"alt="logo-chimcanhcut">
+                    </button>
+               </div>
+               <div class="col-sm-3">
                     <button class="btn btn_about button-style " type="button" data-show="what">
                          <p>WHAT IS PEBBLE MATCH?</p>
                     </button>
                </div>
-               <div class="col-sm-4">
+               <div class="col-sm-3">
                     <button class="btn btn_about button-style " type="button" data-show="why">
                          <p>WHY PEBBLE? </p>
                     </button>
                </div>
-               <div class="col-sm-4">
+               <div class="col-sm-3">
                     <button class="btn btn_about button-style " type="button" data-show="how">
                          <p>HOW TO USE PEBBLE MATCH? </p>
                     </button>
@@ -68,7 +73,7 @@
           </div>
           <div id="fullpage" class="container">
                <div class="section2 fp-auto-height" id="section2">
-                    <div class="content-to-show" , id="about">
+                    <div class="content-to-show intro-about" , id="about">
                          <p>
                               Love is not always at first sight. <br>
                               Love can be blind, <br>
