update login and sign up page

--- a/website/static/styles/login.css
+++ b/website/static/styles/login.css
@@ -5,14 +5,14 @@
 /* BASIC */
 
 
-body {
-  font-family: "Poppins", sans-serif;
+.main {
+  font-family: var(--font-family-custom);
   height: 100vh;
-  background-color: #FF62C7;
+  background-color: var();
 }
 
 a {
-  color: #92badd;
+  color: #0a7adc;
   display:inline-block;
   text-decoration: none;
   font-weight: 400;
@@ -32,20 +32,12 @@ h2 {
 
 /* STRUCTURE */
 
-.wrapper {
-  display: flex;
-  align-items: center;
-  flex-direction: column; 
-  justify-content: center;
-  width: 100%;
-  min-height: 100%;
-  padding: 20px;
-}
+
 
 #formContent {
   -webkit-border-radius: 10px 10px 10px 10px;
   border-radius: 10px 10px 10px 10px;
-  background: #fff;
+  background: var(--color-text-rose-opacity);
   padding: 30px;
   width: 90%;
   max-width: 450px;
@@ -57,8 +49,8 @@ h2 {
 }
 
 #formFooter {
-  background-color: #f6f6f6;
-  border-top: 1px solid #dce8f1;
+  background: var(--color-text-rose-opacity);
+  border-top: 1px solid #fafbfb;
   padding: 25px;
   text-align: center;
   -webkit-border-radius: 0 0 10px 10px;
@@ -70,7 +62,7 @@ h2 {
 /* TABS */
 
 h2.inactive {
-  color: #cccccc;
+  color: #fafafa;
 }
 
 h2.active {
@@ -143,7 +135,7 @@ input[type=text]:focus {
 }
 
 input[type=text]:placeholder {
-  color: #cccccc;
+  color: #ffffff;
 }
 
 
