--- a/website/templates/about.html
+++ b/website/templates/about.html
@@ -36,7 +36,7 @@
                                         class="scale_button button-menu button-style" data-show="about"> About </a>
                               </li>
                               <li>
-                                   <a href="../login.html" class="button-menu button-style"
+                                   <a href="./login.html" class="button-menu button-style"
                                         data-show="login">Login</a>
                               </li>
                          </ul>
@@ -68,7 +68,7 @@
                </div>
           </div>
           <div class="row">
-               <div class="hr-underline col-6"></div>
+               <div class="hr-underline"></div>
 
           </div>
           <div id="fullpage" class="container">
