--- a/website/static/styles/signup.css
+++ b/website/static/styles/signup.css
@@ -1,19 +1,12 @@
-body {
-     font-size: 14px;
-     line-height: 1.8;
-     color: #222;
-     font-weight: 400;
-     font-family: montserrat;
-     background-repeat: no-repeat;
-     background-size: cover;
-     background-position: center center;
-     padding: 50px 0;
-     background-color: #FF62C7;
+.main {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    height: fit-content;
+    background-color: var(--color-text-rose-opacity);
 
  }
- .container {
-     background-color: white;
-     width: 40rem;
+ .container-signup {
+/*      background-color: var(--color-text-rose-opacity); */
+     width: 33rem;
      border-radius: 10px;
  }
  .form-group {
@@ -25,11 +18,10 @@ body {
      color: #555;
      font-weight: 500;
      text-align: center;
-     margin-top: 91px;
      margin-bottom: 5px;
  }
- .form-input {
-     width: 100%;
+ .form-input  {
+     width: 100% !important;
      border: 1px solid #ebebeb;
      border-radius: 5px;
      padding: 10px 20px;
