--- a/website/templates/signup.html
+++ b/website/templates/signup.html
@@ -48,7 +48,7 @@
      </header>
      <div class="container">
           <section class="big-text row">
-               <h1>Welcome to Pebble Match</h1>
+               <h1>SIGN UP FOR FREE</h1>
           </section>
           <section class="row">
                <div class=" col-2"></div>
