set up la route of page

--- a/website/templates/about.html
+++ b/website/templates/about.html
@@ -28,7 +28,7 @@
                     <nav>
                          <ul>
                               <li>
-                                   <a href="../" class="button-menu button-style"
+                                   <a href="../templates/index.html" class="button-menu button-style"
                                         data-show="home"> Home </a>
                               </li>
                               <li>
