--- a/website/static/styles/signup.css
+++ b/website/static/styles/signup.css
@@ -1,13 +1,53 @@
-.main {
+.container-signup {
+    width: 33rem;
+    border-radius: 10px;
+    position: relative;
+
+}
+.ct-signup {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     height: fit-content;
-    background-color: var(--color-text-rose-opacity);
+    transition: 0.4s;
 
+    position: absolute;
  }
- .container-signup {
-/*      background-color: var(--color-text-rose-opacity); */
-     width: 33rem;
-     border-radius: 10px;
+
+
+.ct-accept {
+    position: relative;
+    display: flex;
+
+    transition: 0.4s;
+/*     justify-content: center; */
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+
+
+    border: 1px solid white;
+    border-radius: 30px;
+
+    width: 50em;
+    height: 30rem;
+
+    margin: 50px 0 100px 0;
+    padding: 20px;
+    background-color: #ca9fdb5e;
+    box-shadow: 0em 0.4em 0.4em 0.4em #ffffff94;
+}
+
+.ct-accept-hidden {
+    display: none;
+}
+ /* This css to accept condition of game */
+ .signup-content {
+    visibility: hidden;
+    opacity: 0;
+}
+.signup-content-show{ 
+    visibility: visible;
+    opacity: 1;
+    background-color: var(--color-box-violet);
  }
  .form-group {
      overflow: hidden;
@@ -61,3 +101,48 @@ h2 {
      padding: 0px 10px 0px 10px;
      font-size: 1.5rem;
  }
+
+ /* position for 2 paragrap */
+
+ /* style of rule */
+ .rule-style {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+/*     color: #ebebeb; */
+    margin: 3rem;
+    position: absolute;
+ }
+ .rule-style ol li {
+    margin-left: 5rem;
+    margin-top: 1rem;
+ }
+ /* css of check box - sign up */
+ .form-rule{
+    position: absolute;
+    bottom: 0;
+
+    font-size: 20px;
+    font-weight: 600;
+    width: 100%;
+
+    display: flex;
+   
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+
+    
+
+ }
+/* button accept of rule */
+
+.button-accept:hover {
+    scale: 10px;
+}
+
+div#show_signup{
+    display: none;
+}
+.form-check {
+    margin-top: -8rem;
+}
+ 
