--- a/back_font_test/pebblesite/templates/registration/registration_complete.html
+++ b/back_font_test/pebblesite/templates/registration/registration_complete.html
@@ -6,6 +6,6 @@
     <div class="alert alert-primary" role="alert">
         Registration is Successful
     </div>
-    <a class="btn btn-primary btn-lg" href="{% url 'login' %}">You can Successfully Login Here</a>
+    <a class="btn btn-primary btn-lg" href="{% url 'account' %}">You can Successfully Login Here</a>
 
 {% endblock %}
